# tennisProject

./: .env.example  .gitattributes  .gitignore  .gitmodules  Here's the relevant section from the file you provided  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
tennisproject/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.default  pyproject.toml  server.py  tennis-project
tennisproject/dbt/football/: dbt_project.yml
tennisproject/dbt/tennis/: dbt_project.yml  package-lock.yml  profiles.yml
tennisproject/dbt/tennis_metrics/: dbt_project.yml  profiles.yml
tennisproject/docker/openresty/: 20-envsubst-on-templates.sh  Dockerfile  apigw.conf.template  docker-entrypoint.sh
tennisproject/docker/tennisproject/: docker-entrypoint.sh
tennisproject/footballapi/: README.md  apps.py  models.py  serializers.py  urls.py  views.py
tennisproject/footballapi/elo_ratings/: bundesliga_elo.py  bundesliga_elo_home.py  championship_elo.py  championship_elo_home.py  laliga_elo.py  laliga_elo_home.py  ligue1_elo.py  ligue1_elo_home.py  premier_elo.py  premier_elo_home.py  seriea_elo.py  (+1 more)
tennisproject/icehockeyapi/: apps.py  models.py
tennisproject/sportscore/: apps.py  models.py
tennisproject/tennis_api/: README.md  apps.py  bet_results.py  models.py
tennisproject/tennis_atp/: README.md  apps.py  models.py
tennisproject/tennisapi/: apps.py  models.py  serializers.py  urls.py  views.py
tennisproject/tennisproject/: asgi.py  settings.py  urls.py  wsgi.py
tennisproject/vakio/: apps.py  models.py  vakio.py
(+447 files in other folders)
