[tool.poetry]
name = "tennis-project"
version = "0.1.0"
description = "Tennis Project"
authors = ["repom2 <mikkorepo@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
environ = "^1.0"
dbt-postgres = "^1.4.5"
dbt-rpc = "^0.3.1"
pandas = "^1.5.3"
isort = "^5.12.0"
flake8 = "^6.0.0"
tqdm = "^4.65.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
joblib = "^1.2.0"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"
gradio = "^3.32.0"
tensorflow = "^2.12.0"
django-environ = "^0.11.2"
langchain = "^0.0.331"
openai = "0.28.1"
tabulate = "^0.9.0"
dbt-core = "^1.7.8"
bs4 = "^0.0.2"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"